tests/baselines/reference/classCanExtendConstructorFunction.symbols
=== tests/cases/conformance/salsa/first.js ===
/**
 * @constructor
 * @param {number} numberOxen
 */
function Wagon(numberOxen) {
>Wagon : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))
>numberOxen : Symbol(numberOxen, Decl(first.js, 4, 15))

    this.numberOxen = numberOxen
>this.numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))
>this : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))
>numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))
>numberOxen : Symbol(numberOxen, Decl(first.js, 4, 15))
}
/** @param {Wagon[]=} others */
Wagon.circle = function (others) {
>Wagon.circle : Symbol(Wagon.circle, Decl(first.js, 6, 1))
>Wagon : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))
>circle : Symbol(Wagon.circle, Decl(first.js, 6, 1))
>others : Symbol(others, Decl(first.js, 8, 25))

    return others ? others.length : 3.14;
>others : Symbol(others, Decl(first.js, 8, 25))
>others.length : Symbol(Array.length, Decl(lib.es5.d.ts, --, --))
>others : Symbol(others, Decl(first.js, 8, 25))
>length : Symbol(Array.length, Decl(lib.es5.d.ts, --, --))
}
// ok
class Sql extends Wagon {
>Sql : Symbol(Sql, Decl(first.js, 10, 1))
>Wagon : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))

    constructor() {
        super(); // error: not enough arguments
>super : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))

        this.foonly = 12
>this.foonly : Symbol(Sql.foonly, Decl(first.js, 14, 16))
>this : Symbol(Sql, Decl(first.js, 10, 1))
>foonly : Symbol(Sql.foonly, Decl(first.js, 14, 16))
    }
}
var db = new Sql();
>db : Symbol(db, Decl(first.js, 18, 3))
>Sql : Symbol(Sql, Decl(first.js, 10, 1))

db.numberOxen = db.foonly
>db.numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))
>db : Symbol(db, Decl(first.js, 18, 3))
>numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))
>db.foonly : Symbol(Sql.foonly, Decl(first.js, 14, 16))
>db : Symbol(db, Decl(first.js, 18, 3))
>foonly : Symbol(Sql.foonly, Decl(first.js, 14, 16))

// error, can't extend a TS constructor function
class Drakkhen extends Dragon {
>Drakkhen : Symbol(Drakkhen, Decl(first.js, 19, 25))
>Dragon : Symbol(Dragon, Decl(second.ts, 0, 0))

}

=== tests/cases/conformance/salsa/second.ts ===
/**
 * @constructor
 */
function Dragon(numberEaten: number) {
>Dragon : Symbol(Dragon, Decl(second.ts, 0, 0))
>numberEaten : Symbol(numberEaten, Decl(second.ts, 3, 16))

    this.numberEaten = numberEaten
>numberEaten : Symbol(numberEaten, Decl(second.ts, 3, 16))
}
// error!
class Firedrake extends Dragon {
>Firedrake : Symbol(Firedrake, Decl(second.ts, 5, 1))
>Dragon : Symbol(Dragon, Decl(second.ts, 0, 0))

    constructor() {
        super();
    }
}
// ok
class Conestoga extends Wagon {
>Conestoga : Symbol(Conestoga, Decl(second.ts, 11, 1))
>Wagon : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))

    constructor(public drunkOO: true) {
>drunkOO : Symbol(Conestoga.drunkOO, Decl(second.ts, 14, 16))

        // error: wrong type
        super('nope');
>super : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))
    }
    // should error since others is not optional
    static circle(others: (typeof Wagon)[]) {
>circle : Symbol(Conestoga.circle, Decl(second.ts, 17, 5))
>others : Symbol(others, Decl(second.ts, 19, 18))
>Wagon : Symbol(Wagon, Decl(first.js, 0, 0), Decl(first.js, 6, 1))

        return others.length
>others.length : Symbol(Array.length, Decl(lib.es5.d.ts, --, --))
>others : Symbol(others, Decl(second.ts, 19, 18))
>length : Symbol(Array.length, Decl(lib.es5.d.ts, --, --))
    }
}
var c = new Conestoga(true);
>c : Symbol(c, Decl(second.ts, 23, 3))
>Conestoga : Symbol(Conestoga, Decl(second.ts, 11, 1))

c.drunkOO
>c.drunkOO : Symbol(Conestoga.drunkOO, Decl(second.ts, 14, 16))
>c : Symbol(c, Decl(second.ts, 23, 3))
>drunkOO : Symbol(Conestoga.drunkOO, Decl(second.ts, 14, 16))

c.numberOxen
>c.numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))
>c : Symbol(c, Decl(second.ts, 23, 3))
>numberOxen : Symbol(Wagon.numberOxen, Decl(first.js, 4, 28))

